# webfs

./: Makefile  README.md  pyproject.toml
src/webfs/: __init__.py  webfs.py
tests/: test_webfs.py
