[project]
name = "webfs"
version = "0.0.1"
authors = [
  { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "A scraper that thinks it's a filesystem"
dependencies = [
    "requests",
    "bs4",
    "colorama",
    "mmry",
    "kern",
]

[project.urls]
source = "https://github.com/notarealdeveloper/webfs"
download = "https://pypi.org/project/webfs/#files"
